[tool.poetry]
name = "todomvc-tui"
# This is the version compatibility of the TodoMVC TUI specification.
version = "2.0.0"
description = "TodoMVC TUI implementation in Python using Textual"
authors = ["~hedy <hedy.dev@protonmail.com>"]
readme = "../README.md"
repository = "https://github.com/hedyhli/todomvc-tui"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.63.3"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
