[package]
name = "todomvc-tui"
description = "TodoMVC TUI implementation in Rust using Ratatui"
# This is the version compatibility number of the TodoMVC TUI spec.
version = "1.2.0"
edition = "2021"
authors = ["~hedy <hedy.dev@protonmail.com>"]
readme = "../README.md"
repository = "https://github.com/hedyhli/todomvc-tui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.3"
