[tool.poetry]
name = "todomvc-tui"
version = "0.1.0"
description = ""
authors = ["~hedy <hedy.dev@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.63.3"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
